Update a large number of files. Complete Home, Login, and About Pages. Update Javascript to function on certain pages, etc..

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,3 +1,20 @@
+/**
+* Name: Alex Oladele
+* Date: 1/13/17
+* Course: CSE 270e
+ */
+body {
+    padding: 50px;
+    font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    background-color: beige;
+}
+
+a {
+    color: #00B7FF;
+}
+
+/* Classes */
+
 .row > div {
     margin-top: 10px;
     padding: 20px;
@@ -5,4 +22,14 @@
     outline-offset: -10px;
     -moz-outline-radius: 10px;
     -webkit-outline-radius: 10px;
+    display: inline-block;
 }
+
+/* IDS */
+#tagDiv {
+    text-align: center;
+    font-style: italic;
+    font-weight: bold;
+    height: 55px;
+}
+
