--- a/views/layouts/timer.handlebars
+++ b/views/layouts/timer.handlebars
@@ -1,6 +1,6 @@
 <!--
 * Name: Alex Oladele
-* Date: 1/13/17
+* Date: 1/14/17
 * Course: CSE 270e
 * Assignment: Timer v1.0
 -->
@@ -9,9 +9,68 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>$Title$</title>
+    <title>Oladelaa Timer</title>
+    <script
+            src="https://code.jquery.com/jquery-3.1.1.min.js"
+            integrity="sha256-hVVnYaiADRTO2PzUGmuLJr8BLUSjGIZsDYGmIJLv2b8="
+            crossorigin="anonymous"></script>
+
+    <!-- Latest compiled and minified CSS -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css"
+          integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+    <!-- Optional theme -->
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap-theme.min.css"
+          integrity="sha384-rHyoN1iRsVXV4nD0JutlnGaslCJuC7uwjduW9SVrLvRYooPp2bWYgmgJQIXwl/Sp" crossorigin="anonymous">
+
+    <!-- Font Awesome -->
+    <script src="https://use.fontawesome.com/0ea6c42e2b.js"></script>
+
+    <link rel="stylesheet" href="../../public/css/styles.css">
 </head>
 <body>
-$END$
+<div class="container">
+    <nav class="navbar navbar-inverse">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <a class="navbar-brand">Timers</a>
+            </div>
+            <!--<div class="collapse navbar-collapse" id="myNavbar">-->
+            <ul class="nav navbar-nav">
+                <li id="homeTab"><a href="/">Home</a></li>
+                <li id="aboutTab"><a href="/about">About</a></li>
+            </ul>
+            <!--// TODO Uncomment this div if anything is funky with the NAVBAR-->
+            <!--</div>-->
+            <ul class="nav navbar-nav navbar-right">
+                {{#if loginid}}
+                    <li><a href="logout"><span class="glyphicon glyphicon-log-in"></span>Logout</a></li>{{else}}
+                    <li id="loginTab"><a href="loginform"><span class="glyphicon glyphicon-log-in"></span>Login</a>
+                    </li>{{/if}}
+            </ul>
+        </div>
+    </nav>
+</div>
+<div>
+    {{{ body }}}
+</div>
+
+<br>
+
+<div class="container">
+    <div class="row">
+        <div id="tagDiv" class="col-xs-12">
+            <span> <p>Timer Application</p> </span>
+        </div>
+
+    </div>
+</div>
+<script src="../../public/js/timer.js"></script>
+<script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
