--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -2,16 +2,12 @@
 * Name: Alex Oladele
 * Date: 1/13/17
 * Course: CSE 270e
-* Assignment: Timver v1.0
+* Assignment: Timer v1.0
 -->
-<head>
-    <script src="../public/js/about.js"></script>
-</head>
 
-<section>
-    <div class="container">
-        <div class="row">
-            <div id="infoRow" class="col-xs-12">
+<div class="container">
+    <div class="row">
+        <div id="infoRow" class="col-xs-12">
             <span>
             <h3>Timer Application</h3>
             <hr>
@@ -22,14 +18,9 @@
                 <li>Set Multiple Times</li>
                 <li>Share these times across multiple devices</li>
                 <li>Receive names alerts when a timer has expired</li>
-                <li>Over-Time indication so you know how burnt your food is</li>
+                <li>Over-Time indication so you know how burnt your food is good</li>
             </ul>
         </span>
-            </div>
-
         </div>
-        {{>info this}}
     </div>
-
-
-</section>
+</div>
