--- a/views/partials/info.handlebars
+++ b/views/partials/info.handlebars
@@ -2,16 +2,19 @@
 * Name: Alex Oladele
 * Date: 1/13/17
 * Course: CSE 270e
-* Assignment: //TODO 
+* Assignment: Timer v1.0
 -->
-
-<!DOCTYPE html>
-<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>$Title$</title>
+    <link href="../../public/css/about.css" rel="stylesheet">
 </head>
-<body>
-$END$
-</body>
-</html>
+
+<div class="info">
+    <button id="authorBtn">Author</button>
+    <p class="toHide">Program Written by Alex Oladele</p>
+</div>
+<br>
+<div class="info">
+    <button id="courseBtn">Course</button>
+    <p class="toHide">Program Written for CSE270e, Winter Term 2017. <a href="https://www.miamioh.edu/">Miami
+        University</a></p>
+</div>
