--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -4,6 +4,7 @@
             Upload an Image
         </h3>
     </div>
+    <!-- Sends the form data to the images controller to be processed-->
     <form method="post" action="/images" enctype="multipart/form-data">
         <div class="panel-body form-horizontal">
             <div class="form-group col-md-12">
