--- a/public/css/loginForm.css
+++ b/public/css/loginForm.css
@@ -20,7 +20,7 @@ input[type=text], input[type=password] {
     box-sizing: border-box;
 }
 
-#login-btn {
+#loginBtn {
     background-color: #4CAF50;
     color: white;
     padding: 14px 20px;
