--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -27,7 +27,7 @@
             </div>
             <div class="form-group col-md-12">
                 <div class="col-md-12 text-right">
-                    <button type="submit" id="login-btn" class="btn btn-success" type="button"><i
+                    <button type="submit" id="loginBtn" class="btn btn-success" type="button"><i
                             class="fa fa-cloud-upload "></i> Upload Image
                     </button>
                 </div>
