Finish Timer layout

--- a/public/css/loginForm.css
+++ b/public/css/loginForm.css
@@ -2,7 +2,7 @@
  * Name: Alex Oladele
  * Date: 1/15/17
  * Course CSE 270e
- * Assignment: //Timer v1.0
+ * Assignment: Timer v1.0
  */
 
 /*  LOGIN FORM  */
