--- a/views/layouts/timer.handlebars
+++ b/views/layouts/timer.handlebars
@@ -57,11 +57,8 @@
     </nav>
 
 {{#if loginid}}
-        <div class="container">
-            <div class="row">
-                <div class="col-md-6">Hello there {{loginid}}!
-                </div>
-            </div>
+        <div class="alert alert-success">
+            Hello {{loginid}}!
         </div>
     </div>
 {{/if}}
