--- a/views/timer.handlebars
+++ b/views/timer.handlebars
@@ -2,5 +2,80 @@
 * Name: Alex Oladele
 * Date: 1/13/17
 * Course: CSE 270e
-* Assignment: //TODO 
+* Assignment: Timer v1.0
 -->
+<head>
+    <link href="../public/css/timer.css" rel="stylesheet">
+</head>
+
+{{#if loginid}}
+    <div class="container">
+        <div class="row">
+
+            <!-- First Box -->
+            <div class="col-xs-4 timers" id="timer1">
+                <div class="form-group">
+                    <label for="timerName">Timer Name</label>
+                    <input type="text" class="form-control" id="timerName">
+                </div>
+                <hr>
+                <section class="centered">
+                    <div class="row ">
+                        <div class="form-group">
+                            <input type="number" class="col-xs-4" placeholder="0">
+                            <input type="number" class="col-xs-4" placeholder="00">
+                            <input type="number" class="col-xs-4" placeholder="00">
+                        </div>
+                    </div>
+                </section>
+                <div>Done at:</div>
+                <hr>
+                <button type="button" class="btn btn-success">Start</button>
+            </div>
+
+            <!-- Second Box -->
+            <div class="col-xs-4 timers" id="timer2">
+                <div class="form-group">
+                    <label for="timerName">Timer Name</label>
+                    <input type="text" class="form-control" id="timerName">
+                </div>
+                <hr>
+                <section class="centered">
+                    <div class="row ">
+                        <div class="form-group">
+                            <input type="number" class="col-xs-4" placeholder="0">
+                            <input type="number" class="col-xs-4" placeholder="00">
+                            <input type="number" class="col-xs-4" placeholder="00">
+                        </div>
+                    </div>
+                </section>
+                <div>Done at:</div>
+                <hr>
+                <button type="button" class="btn btn-success">Start</button>
+            </div>
+
+            <!-- Third Box -->
+            <div class="col-xs-4 timers" id="timer3">
+                <div class="form-group">
+                    <label for="timerName">Timer Name</label>
+                    <input type="text" class="form-control" id="timerName">
+                </div>
+                <hr>
+                <section class="centered">
+                    <div class="row ">
+                        <div class="form-group">
+                            <input type="number" class="col-xs-4" placeholder="0">
+                            <input type="number" class="col-xs-4" placeholder="00">
+                            <input type="number" class="col-xs-4" placeholder="00">
+                        </div>
+                    </div>
+                </section>
+                -
+                <div>Done at:</div>
+                <hr>
+                <button type="button" class="btn btn-success">Start</button>
+            </div>
+
+        </div>
+    </div>
+{{/if}}
