--- a/views/main.handlebars
+++ b/views/main.handlebars
@@ -15,10 +15,10 @@
             <br>
             <p>Timer app lets you: </p>
             <ul>
-                <li>Set Multiple Times</li>
-                <li>Share these times across multiple devices</li>
-                <li>Receive names alerts when a timer has expired</li>
-                <li>Over-Time indication so you know how burnt your food is good</li>
+                <li>Set Multiple Times.</li>
+                <li>Share these times across multiple devices.</li>
+                <li>Receive names alerts when a timer has expired.</li>
+                <li>Over-Time indication so you know how burnt your food is.</li>
             </ul>
         </span>
         </div>
