--- a/views/timer.handlebars
+++ b/views/timer.handlebars
@@ -16,64 +16,82 @@
             <div class="col-xs-4 timers" id="timer1">
                 <div class="form-group">
                     <label for="timerName">Timer Name</label>
-                    <input type="text" class="form-control" id="timerName">
+                    <input type="text" class="form-control" id="timerName" data-toggle="tooltip"
+                           title="Enter the name of the timer">
                 </div>
                 <hr>
                 <section class="centered">
                     <div class="row ">
                         <div class="form-group">
-                            <input type="number" class="col-xs-4" placeholder="0">
-                            <input type="number" class="col-xs-4" placeholder="00">
-                            <input type="number" class="col-xs-4" placeholder="00">
+                            <input type="number" class="col-xs-4" placeholder="0" data-toggle="tooltip"
+                                   title="Enter a number between 0 and 12">
+                            <input type="number" class="col-xs-4" placeholder="00" data-toggle="tooltip"
+                                   title="Enter a number between 0 and 59">
+                            <input type="number" class="col-xs-4"
+                                   placeholder="00" data-toggle="tooltip"
+                                   title="Enter a number between 0 and 59">
                         </div>
                     </div>
                 </section>
                 <div>Done at:</div>
                 <hr>
-                <button type="button" class="btn btn-success">Start</button>
+                <button type="button" class="btn btn-js btn-success">Start</button>
             </div>
 
             <!-- Second Box -->
             <div class="col-xs-4 timers" id="timer2">
                 <div class="form-group">
                     <label for="timerName">Timer Name</label>
-                    <input type="text" class="form-control" id="timerName">
+                    <input type="text" class="form-control" id="timerName" data-toggle="tooltip"
+                           title="Enter the name of the timer">
                 </div>
                 <hr>
                 <section class="centered">
                     <div class="row ">
                         <div class="form-group">
-                            <input type="number" class="col-xs-4" placeholder="0">
-                            <input type="number" class="col-xs-4" placeholder="00">
-                            <input type="number" class="col-xs-4" placeholder="00">
+                            <input type="number" class="col-xs-4" placeholder="0" data-toggle="tooltip"
+                                   title="Enter a number between 0 and 12">
+                            <input type="number" class="col-xs-4" placeholder="00" data-toggle="tooltip"
+                                   title="Enter a number between 0 and 59">
+                            <input type="number" class="col-xs-4"
+                                   placeholder="00" data-toggle="tooltip"
+                                   title="Enter a number between 0 and 59">
                         </div>
                     </div>
                 </section>
                 <div>Done at:</div>
                 <hr>
-                <button type="button" class="btn btn-success">Start</button>
+                <div class="buttons">
+                    <button type="button" class="btn btn-js btn-success">Start</button>
+                </div>
             </div>
 
             <!-- Third Box -->
             <div class="col-xs-4 timers" id="timer3">
                 <div class="form-group">
                     <label for="timerName">Timer Name</label>
-                    <input type="text" class="form-control" id="timerName">
+                    <input type="text" class="form-control" id="timerName" data-toggle="tooltip"
+                           title="Enter the name of the timer">
                 </div>
                 <hr>
                 <section class="centered">
                     <div class="row ">
                         <div class="form-group">
-                            <input type="number" class="col-xs-4" placeholder="0">
-                            <input type="number" class="col-xs-4" placeholder="00">
-                            <input type="number" class="col-xs-4" placeholder="00">
+                            <input type="number" class="col-xs-4" placeholder="0" data-toggle="tooltip"
+                                   title="Enter a number between 0 and 12">
+                            <input type="number" class="col-xs-4" placeholder="00" data-toggle="tooltip"
+                                   title="Enter a number between 0 and 59">
+                            <input type="number" class="col-xs-4"
+                                   placeholder="00" data-toggle="tooltip"
+                                   title="Enter a number between 0 and 59">
                         </div>
                     </div>
                 </section>
-                -
                 <div>Done at:</div>
                 <hr>
-                <button type="button" class="btn btn-success">Start</button>
+                <div class="buttons">
+                    <button type="button" class="btn btn-js btn-success">Start</button>
+                </div>
             </div>
 
         </div>
