Finish implementing timer countdown, and start and reset buttons

--- a/views/layouts/timer.handlebars
+++ b/views/layouts/timer.handlebars
@@ -81,10 +81,10 @@
         <div id="tagDiv" class="col-xs-12">
             <span> Timer Application </span>
         </div>
-
     </div>
 </div>
 <script src="../../public/js/timer.js"></script>
+<script src="../../public/js/tabs.js"></script>
 
 <!--TODO MAKE SURE TO REMOVE THIS-->
 <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
