--- a/views/timer.handlebars
+++ b/views/timer.handlebars
@@ -16,24 +16,24 @@
             <div class="col-xs-4 timers" id="timer1">
                 <div class="form-group">
                     <label for="timerName">Timer Name</label>
-                    <input type="text" class="form-control" id="timerName" data-toggle="tooltip"
+                    <input type="text" class="form-control timername" name='timername' data-toggle="tooltip"
                            title="Enter the name of the timer">
                 </div>
                 <hr>
                 <section class="centered">
                     <div class="row ">
                         <div class="form-group">
-                            <input type="number" class="col-xs-4" placeholder="0" data-toggle="tooltip"
-                                   title="Enter a number between 0 and 12">
-                            <input type="number" class="col-xs-4" placeholder="00" data-toggle="tooltip"
+                            <input type="number" class="col-xs-4 hours" placeholder="0" data-toggle="tooltip"
+                                   title="Enter a number between 0 and 11">
+                            <input type="number" class="col-xs-4 minutes" placeholder="00" data-toggle="tooltip"
                                    title="Enter a number between 0 and 59">
-                            <input type="number" class="col-xs-4"
+                            <input type="number" class="col-xs-4 seconds"
                                    placeholder="00" data-toggle="tooltip"
                                    title="Enter a number between 0 and 59">
                         </div>
                     </div>
                 </section>
-                <div>Done at:</div>
+                <span class='timerdone'>Done at: <span class="timerdonetime"></span></span>
                 <hr>
                 <button type="button" class="btn btn-js btn-success">Start</button>
             </div>
@@ -42,24 +42,24 @@
             <div class="col-xs-4 timers" id="timer2">
                 <div class="form-group">
                     <label for="timerName">Timer Name</label>
-                    <input type="text" class="form-control" id="timerName" data-toggle="tooltip"
+                    <input type="text" class="form-control timername" name='timername' data-toggle="tooltip"
                            title="Enter the name of the timer">
                 </div>
                 <hr>
                 <section class="centered">
                     <div class="row ">
                         <div class="form-group">
-                            <input type="number" class="col-xs-4" placeholder="0" data-toggle="tooltip"
-                                   title="Enter a number between 0 and 12">
-                            <input type="number" class="col-xs-4" placeholder="00" data-toggle="tooltip"
+                            <input type="number" class="col-xs-4 hours" placeholder="0" data-toggle="tooltip"
+                                   title="Enter a number between 0 and 11">
+                            <input type="number" class="col-xs-4 minutes" placeholder="00" data-toggle="tooltip"
                                    title="Enter a number between 0 and 59">
-                            <input type="number" class="col-xs-4"
+                            <input type="number" class="col-xs-4 seconds"
                                    placeholder="00" data-toggle="tooltip"
                                    title="Enter a number between 0 and 59">
                         </div>
                     </div>
                 </section>
-                <div>Done at:</div>
+                <span class='timerdone'>Done at: <span class="timerdonetime"></span></span>
                 <hr>
                 <div class="buttons">
                     <button type="button" class="btn btn-js btn-success">Start</button>
@@ -70,24 +70,24 @@
             <div class="col-xs-4 timers" id="timer3">
                 <div class="form-group">
                     <label for="timerName">Timer Name</label>
-                    <input type="text" class="form-control" id="timerName" data-toggle="tooltip"
+                    <input type="text" class="form-control timername" name='timername' data-toggle="tooltip"
                            title="Enter the name of the timer">
                 </div>
                 <hr>
                 <section class="centered">
                     <div class="row ">
                         <div class="form-group">
-                            <input type="number" class="col-xs-4" placeholder="0" data-toggle="tooltip"
-                                   title="Enter a number between 0 and 12">
-                            <input type="number" class="col-xs-4" placeholder="00" data-toggle="tooltip"
+                            <input type="number" class="col-xs-4 hours" placeholder="0" data-toggle="tooltip"
+                                   title="Enter a number between 0 and 11">
+                            <input type="number" class="col-xs-4 minutes" placeholder="00" data-toggle="tooltip"
                                    title="Enter a number between 0 and 59">
-                            <input type="number" class="col-xs-4"
+                            <input type="number" class="col-xs-4 seconds"
                                    placeholder="00" data-toggle="tooltip"
                                    title="Enter a number between 0 and 59">
                         </div>
                     </div>
                 </section>
-                <div>Done at:</div>
+                <span class='timerdone'>Done at: <span class="timerdonetime"></span></span>
                 <hr>
                 <div class="buttons">
                     <button type="button" class="btn btn-js btn-success">Start</button>
