--- a/views/timer.handlebars
+++ b/views/timer.handlebars
@@ -22,9 +22,9 @@
                 <hr>
                 <section class="centered">
                     <div class="row ">
-                        <div class="form-group">
+                        <div class="form-group timer1">
                             <input type="number" class="col-xs-4 hours" placeholder="0" data-toggle="tooltip"
-                                   title="Enter a number between 0 and 11">
+                                   title="Enter a number between 0 and 9">
                             <input type="number" class="col-xs-4 minutes" placeholder="00" data-toggle="tooltip"
                                    title="Enter a number between 0 and 59">
                             <input type="number" class="col-xs-4 seconds"
@@ -50,7 +50,7 @@
                     <div class="row ">
                         <div class="form-group">
                             <input type="number" class="col-xs-4 hours" placeholder="0" data-toggle="tooltip"
-                                   title="Enter a number between 0 and 11">
+                                   title="Enter a number between 0 and 9">
                             <input type="number" class="col-xs-4 minutes" placeholder="00" data-toggle="tooltip"
                                    title="Enter a number between 0 and 59">
                             <input type="number" class="col-xs-4 seconds"
@@ -78,7 +78,7 @@
                     <div class="row ">
                         <div class="form-group">
                             <input type="number" class="col-xs-4 hours" placeholder="0" data-toggle="tooltip"
-                                   title="Enter a number between 0 and 11">
+                                   title="Enter a number between 0 and 9">
                             <input type="number" class="col-xs-4 minutes" placeholder="00" data-toggle="tooltip"
                                    title="Enter a number between 0 and 59">
                             <input type="number" class="col-xs-4 seconds"
