--- a/views/timer.handlebars
+++ b/views/timer.handlebars
@@ -21,9 +21,9 @@
                 </div>
                 <hr>
                 <section class="centered">
-                    <div class="row ">
-                        <div class="form-group timer1">
-                            <input type="number" class="col-xs-4 hours" placeholder="0" data-toggle="tooltip"
+                    <div class="row">
+                        <div class="form-group">
+                            <input type="number" class="col-xs-4 hours" id="hrs1" placeholder="0" data-toggle="tooltip"
                                    title="Enter a number between 0 and 9">
                             <input type="number" class="col-xs-4 minutes" placeholder="00" data-toggle="tooltip"
                                    title="Enter a number between 0 and 59">
@@ -49,7 +49,7 @@
                 <section class="centered">
                     <div class="row ">
                         <div class="form-group">
-                            <input type="number" class="col-xs-4 hours" placeholder="0" data-toggle="tooltip"
+                            <input type="number" class="col-xs-4 hours" id="hrs2" placeholder="0" data-toggle="tooltip"
                                    title="Enter a number between 0 and 9">
                             <input type="number" class="col-xs-4 minutes" placeholder="00" data-toggle="tooltip"
                                    title="Enter a number between 0 and 59">
