Add more comments and cleaned up code

--- a/views/timer.handlebars
+++ b/views/timer.handlebars
@@ -15,7 +15,7 @@
             <!-- First Box -->
             <div class="col-xs-4 timers" id="timer1">
                 <div class="form-group">
-                    <label for="timerName">Timer Name</label>
+                    <label for="timername">Timer Name</label>
                     <input type="text" class="form-control timername" name='timername' data-toggle="tooltip"
                            title="Enter the name of the timer">
                 </div>
@@ -41,7 +41,7 @@
             <!-- Second Box -->
             <div class="col-xs-4 timers" id="timer2">
                 <div class="form-group">
-                    <label for="timerName">Timer Name</label>
+                    <label for="timername">Timer Name</label>
                     <input type="text" class="form-control timername" name='timername' data-toggle="tooltip"
                            title="Enter the name of the timer">
                 </div>
@@ -69,7 +69,7 @@
             <!-- Third Box -->
             <div class="col-xs-4 timers" id="timer3">
                 <div class="form-group">
-                    <label for="timerName">Timer Name</label>
+                    <label for="timername">Timer Name</label>
                     <input type="text" class="form-control timername" name='timername' data-toggle="tooltip"
                            title="Enter the name of the timer">
                 </div>
